@@ -1,3 +1,9 @@
+2003-10-22  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 04006] checking GC_version for libgc
+	 reported by SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>
+	* acinclude.m4 (AC_W3M_GC): check GC_init instead of GC_version
+
 2003-10-21  SAKAI Kiyotaka <ksakai@kso.netwk.ntt-at.co.jp>
 
 	* [w3m-dev 03996] HELP_DIR and funcname.tab
@@ -8231,4 +8237,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.887 2003/10/20 16:49:10 ukai Exp $
+$Id: ChangeLog,v 1.888 2003/10/21 17:12:09 ukai Exp $
